vendor/meme/src/meme.h

     
typedef enum {Sym, Tri}
 MASK_TYPE;
typedef enum {Minp, Minpop} MASK_COMB_TYPE;
typedef enum {Pair, Blend} NEGTYPE;
typedef enum {Uni, Pam} MAP_TYPE;
typedef enum {Mega, MegaP, Dmix, Dirichlet, Addone} PTYPE;
typedef enum {Combine, Separate, Norc, Unstranded} STYPE;
typedef enum {Classic, NC, SE, DE, NZ, CE, CD} OBJTYPE;
typedef enum {mHG, mRS, mBN, No_testtype} TESTTYPE;
typedef enum {LLR_POP, LLR, Likelihood, Class, GLAM} GLOB_OBJ_FN;
typedef enum {NORMAL, X_ONLY, ALL, NO_POINT_B} POINT_BRANCHES;
#define MAX_LOCAL_MAXIMA 1000000
#define nsites(d, w, l) ((l) * ps(d, w))
#define set_seq_groups_to_include(dataset, groups) \
  { \
    dataset->save_include_group[0] = dataset->include_group[0]; \
    dataset->save_include_group[1] = dataset->include_group[1]; \
    dataset->save_include_group[2] = dataset->include_group[2]; \
    dataset->include_group[0] = groups[0]; \
    dataset->include_group[1] = groups[1]; \
    dataset->include_group[2] = groups[2]; \
    dataset->n_included = \
      (dataset->include_group[0]?dataset->n_group[0]:0) \
      + (dataset->include_group[1]?dataset->n_group[1]:0) \
      + (dataset->include_group[2]?dataset->n_group[2]:0); \
  }
#define set_seq_regions_to_include(dataset, incl0, incl1, incl2) \
  { \
    dataset->save_include_region[0] = dataset->include_region[0]; \
    dataset->save_include_region[1] = dataset->include_region[1]; \
    dataset->save_include_region[2] = dataset->include_region[2]; \
    dataset->include_region[0] = incl0; \
    dataset->include_region[1] = incl1; \
    dataset->include_region[2] = incl2; \
  }
typedef struct sample {
  char *sample_name; 
  char *descript; 
  long length; 
  char *seq; 
  uint8_t *res; 
  uint8_t *resic; 
  double sw; 
  WEIGHTS_T *weights; 
  double *not_o; 
  int *log_not_o; 
  int **pY; 
  char *pYic; 
  Z_T *z; 
  Z_T *z_buf; 
  double *psp_original; 
  double *psp_original_buf; 
  double *log_psp; 
  double max_log_psp; 
  double *log_psp_buf; 
  double *counts; 
  LCB_T *logcumback; 
  int nsites; 
  int *sites; 
  double minpv; 
  int group;	
  int orig_index;	
} SAMPLE;
typedef double **THETA;
#define theta(b, c)   theta_ref(theta, b, c)
#define logtheta(b, c)    theta_ref(logtheta, b, c)
#define obs(b, c)   theta_ref(obs, b, c)
typedef struct p_prob *P_PROB;
typedef struct p_prob {
  int x; 
  int y; 
  bool ic; 
  bool negative;	
  int rank;		
  double ranksum;	
  double dist;		
  double in_region;	
  double wN;		
  double prob; 		
} p_prob;
typedef struct Model {
  MOTYPE mtype; 
  int min_w; 
  int max_w; 
  bool all_widths; 
  double pw; 
  double psites; 
  P_PROB maxima; 
  bool pal; 
  bool invcomp; 
  int imotif; 
  int w; 
  THETA theta; 
  THETA logtheta; 
  THETA logtheta_rc; 
  THETA obs; 
  double lambda; 
  double lambda_obs; 
  double nsites; 
  double nsites_obs; 
  int nsites_dis; 
  char cons[MAXSITE+1]; 
  char cons0[MAXSITE+1]; 
  double rentropy[MAXSITE]; 
  double rel; 
  double ic; 
  double ll; 
  double mll_0; 
  double mll_1; 
  double logpv; 
  double logev; 
  double llr; 
  double site_threshold; 
  int iter; 
  int ID; 
  int iseq; 
  int ioff; 
  double pc; 
  OBJTYPE objfun; 
  int alength; 
} MODEL;
typedef struct p_point {
  int c; 			
  int *w; 			
  double *nsites; 		
  uint8_t **e_cons0; 		
} P_POINT;
typedef struct s_point {
  double score; 
  int iseq; 
  int ioff; 
  int w0; 
  double nsites0; 
  double wgt_nsites; 
  uint8_t *e_cons0; 
  char *cons0; 
  HEAP *seed_heap;    
  bool evaluate;   
  double sig; 
} S_POINT;
typedef struct candidate {
  S_POINT *s_point; 
  int w; 
  bool pal; 
  bool invcomp; 
  double lambda; 
  char cons[MAXSITE+1]; 
  double ic; 
  double rel; 
  double ll; 
  double sig; 
  double llr;           
} CANDIDATE;
typedef struct motif_summary {
  int width; 
  int num_sites; 
  int num_negative_sites; 
  double ic; 
  double re; 
  double llr; 
  double p_value_exp; 
  double p_value_mant; 
  double e_value_exp; 
  double e_value_mant; 
  double bayes; 
  double elapsed_time; 
  double **pssm; 
  THETA psfm; 
  char* regexp; 
  char* consensus; 
  P_PROB sites; 
} MOTIF_SUMMARY;
typedef struct Priors {
  PTYPE ptype; 
  double prior_count[MAXALPH]; 
  PriorLib *plib; 
  PriorLib *plib0; 
} PRIORS;
typedef struct motif {
  char *name; 
  int width; 
  int pos; 
  double roc; 
  int shift; 
  int pass; 
  double recall; 
  double precision; 
  double min_thresh; 
  double max_thresh; 
  double pal; 
  double like; 
  double sig; 
  double ic; 
  double sites; 
  int w; 
  double thresh; 
  HASH_TABLE ht; 
} MOTIF;
typedef struct branch_params {
  int bfactor; 
  POINT_BRANCHES point_branch;  
  bool w_branch; 
} BRANCH_PARAMS;
typedef struct hist_itm {
  int x;                        
  int count;                    
} HIST_ITM;
typedef struct hist {
  int n;                        
  HIST_ITM *entries;            
} HIST;
typedef struct Group_t {
  bool em[3];			
  bool trim[3];			
  bool pvalue[3];		
  bool nsites[3];		
} GROUP_T;
typedef struct Dataset {
  ALPH_T *alph;				
  int total_res;			
  double wgt_total_res;			
  int n_samples;			
  int n_group[3];			
  int group_last_idx[3];		
  SAMPLE **samples;			
  SAMPLE **input_order;			
  double *seq_weights;			
  int n_wgts;				
  long max_slength;			
  long min_slength;			
  double ce_frac;			
  int n_region[3];			
  int region_last_pos[3];		
  int ce_max_dist;			
  int psp_w;				
  int log_psp_w;			
  double *res_freq;			
  bool mpi;				
  bool invcomp;				
  bool pal;                  		
  THETA map;				
  THETA lomap;				
  MOTIF *motifs;			
  NEGTYPE negtype;			
  int back_order;			
  ARRAY_T *back;			
  double log_total_prob;		
  PRIORS *priors;			
  P_POINT *p_point;			
  double min_nsites;			
  double max_nsites;			
  double wnsites;			
  bool ma_adj;				
  double wg;				
  double ws;				
  bool endgaps;				
  double distance;			
  int nmotifs;				
  int maxiter;				
  double evt;				
  char *mod;				
  char *mapname;			
  double map_scale;			
  char *priorname;			
  double beta;				
  int seed;				
  double seqfrac;			
  char *plib_name;			
  char *bfile;				
  char *datafile;			
  char *negfile;			
  int neg_n_samples;			
  char *pspfile;			
  char *command;			
  OBJTYPE objfun;			
  THETA pairwise;			
  char *output_directory;		
  double max_time;			
  int main_hs;				
  TESTTYPE test;			
  double hsfrac;			
  int shuffle;				
  double hs_decrease;			
  BRANCH_PARAMS *branch_params;		
  bool use_llr;				
  int brief;				
  bool print_heaps;			
  bool print_pred;			
  bool include_group[3];		
  bool save_include_group[3];		
  bool include_region[3];		
  bool save_include_region[3];		
  int n_included;			
  GROUP_T primary_groups;		
  GROUP_T control_groups;		
  int last_seed_seq;			
  int last_seed_pos;			
  int search_size;			
  int max_words;			
  int max_size;				
  int no_rand;				
  int classic_max_nsites;		
  int imotif;                   	
} DATASET;
typedef struct {
  int seqno; 
  int pos; 
  double zij; 
  int invcomp; 
} SITE;
typedef struct {
  int *hits;            
  double *pvalues; 
  int  *svalues; 
  double pv; 
  char *diagram;
} TILING;
S_POINT *get_starts(
  DATASET *primary, 
  DATASET *control, 
  MODEL *model, 
  uint8_t *e_cons, 
  int *n_starts 
);
THETA init_map(
  MAP_TYPE type,    
  double scale,     
  ALPH_T *alph, 
  ARRAY_T *back, 
  bool lo 
);
void convert_to_lmap (
  THETA map,
  int lmap[MAXALPH][MAXALPH],
  ALPH_T *alph
);
void copy_model(
  MODEL *m1, 
  MODEL *m2, 
  ALPH_T *alph 
);
void free_model(
    MODEL *model 
);
MODEL *create_model(
  MOTYPE mtype, 
  bool invcomp, 
  int max_w, 
  ALPH_T *alph, 
  OBJTYPE objfun 
);
bool init_model(
  S_POINT *s_point, 
  MODEL *model, 
  DATASET *dataset, 
  int imotif 
);
void erase(
  DATASET *dataset, 
  MODEL *model 
);
PRIORS *create_priors(
  PTYPE ptype, 
  double beta,
  DATASET *dataset, 
  char *plib_name 
);
void init_meme_background (
  char *bfile, 
  bool rc, 
  DATASET *dataset, 
  char *alph_file, 
  ALPHABET_T alphabet_type,     
  int order, 
  char *seqfile, 
  bool status 
);